--- a/index.html
+++ b/index.html
@@ -6,31 +6,27 @@
     <link rel="stylesheet" href="main.css">
     <script src="jquery-3.1.1.min.js"></script>
     <script src="phaser.min.js"></script>
-    <script src="client.js"></script>
   </head>
   <body>
 
-	<div class='score'>
-		<b>Счет синего игрока: <span id='score0'>0</span></b>
-		<b>Счет красного игрока: <span id='score1'>0</span></b>
-	</div>
-
-  <div class="end">
-    <p id='endText'>Победил синий игрок!</p>
-    <a href="index.html">Сыграть еще раз?</a>
-  </div>
+  <div class="score"></div>
   
-  <script>
-    $(document).ready(function() {
-      $(".end").hide();
+  <div class="lobby">
+    <h3>Подключенные игроки:</h3>
+    <div class="player" id="0"></div>
+    <div class="player" id="1"></div>
+    <div class="player" id="2"></div>
+    <div class="player" id="3"></div>
+    <button>Готов!</button>
+    <p class='count'>Ждем пока игроки будут готовы...</p>
+    <select name="colorPick" onchange="changeColor(this)">
+      <option value="Синий" selected>Синий</option>
+      <option value="Красный" >Красный</option>
+      <option value="Желтый" >Желтый</option>
+      <option value="Зеленый" >Зеленый</option>
+    </select>
+  </div>
 
-      $('a').click(function(){
-          location.reload();
-      });
-
-    });
-
-
-  </script>
+	<script src="client.js"></script>
   </body>
 </html>
